# cmake-multi-config-library-selection

./: CMakeLists.txt  main.cpp  value.cpp  value.hpp
